sfdx-spa-alcala/force-app/main/default/objects/Class__c/Class__c.object-meta.xml
<CustomObject>
    <description>The Course object represents an academic classroom that a Department or School (the K12 Account) offers. It contains information such as Class Title or Class ID. It does not contain information about the running of a class at a specific time
(this information is instead contained in the Class Offering object).</description>
    <label>Class</label>
    <nameField>
        <displayFormat>Class ID-{0000}</displayFormat>
        <label>Class ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>