sfdx-spa-alcala/force-app/main/default/objects/Class__c/fields/Academic_Department__c.field-meta.xml
<CustomField>
    <fullName>Academic_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes1</relationshipName>
    <type>Lookup</type>
</CustomField>