sfdx-spa-alcala/force-app/main/default/objects/Class__c/fields/Credit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hours__c</fullName>
    <label>Credit Hours</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>