sfdx-spa-alcala/force-app/main/default/objects/Class__c/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grade Level</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Classes (Grade Level)</relationshipLabel>
    <relationshipName>Classes2</relationshipName>
    <type>Lookup</type>
</CustomField>