sfdx-spa-alcala/force-app/main/default/objects/Class__c/listViews/All_Classes.listView-meta.xml
<ListView>
    <fullName>All_Classes</fullName>
    <columns>NAME</columns>
    <columns>School_Name__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Academic_Department__c</columns>
    <columns>Grade_Level__c</columns>
    <columns>Credit_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Classes</label>
</ListView>